# synviasat-sysfirst-compositional

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cpp  synthesis.cpp  synthesis.h
app/src/util/: getenv.h
etc/: build_type.cmake  cflags.cmake  scanners.cmake
lib/: CMakeLists.txt
lib/include/: edge_cons.h  hello.h  preprocess.h
lib/include/formula/: CMakeLists.txt  aalta_formula.cpp  aalta_formula.h
lib/include/ltlf2dfa/: CMakeLists.txt  edge_cons.cpp  edge_cons.h  graph.h  graph_ext.cpp  graph_ext.h  mona_ext.cpp  mona_ext.h  syft_ext.cpp  syft_ext.h  synthesis.cpp  synthesis.h
lib/include/ltlfsat/: CMakeLists.txt  carchecker.h  carsolver.h  evidence.cpp  ltlfchecker.h  solver.cpp  solver.h
lib/include/ltlfsyn/: CMakeLists.txt  af_utils.cpp  edge_cons.cpp  edge_cons.h  formula_in_bdd.cpp  formula_in_bdd.h  preprocess.cpp  synthesis.cpp  synthesis.h
lib/include/ltlparser/: CMakeLists.txt
lib/include/ltlparser/ltl2smv/: ltl2smvspec.cpp  ltl2smvspec.h
lib/include/ltlparser/ltlf2ltl/: ltlf2ltl.h
lib/include/ltlparser/ltlf2smv/: ltlf2smv.cpp  ltlf2smv.h
lib/include/minisat/: CMakeLists.txt
lib/include/minisat/core/: Solver.cc  SolverTypes.h
lib/include/minisat/mtl/: Map.h
lib/include/minisat/utils/: System.cc
lib/include/nested/: nested.h
lib/include/partvar/: partvar.cpp  partvar.h
lib/include/synutil/: CMakeLists.txt  af_utils.cpp  af_utils.h  formula_in_bdd.cpp  formula_in_bdd.h  preprocess.cpp  preprocess.h  syn_states.cpp  syn_states.h
lib/include/util/: utility.h
lib/src/: edge_cons.cpp  hello.cpp
lib/src/nested/: nested.cpp
lib/src/util/: utility.cpp
lib/unit-test/: CMakeLists.txt  unit-test.cpp
